# EvoNLP_J7SQ

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug-report.yaml  paper-review.yaml
Xlearn/: __init__.py  cli.py  constant.py  exp.py  utils.py
Xlearn/callback/: __init__.py  base.py  logging.py  lr_schedule.py
Xlearn/datasets/: __init__.py  base.py  imdb.py  mnist.py  static.py  time_ml.py
Xlearn/networks/: __init__.py  base.py
Xlearn/networks/_skorch/: __init__.py  data.py
Xlearn/networks/_tensorflow/: tcn.py
Xlearn/networks/_torch/: __init__.py
Xlearn/networks/activation/: sparsemax.py
Xlearn/nlp/: __init__.py
Xlearn/runner/: base.py
Xlearn/utils/: __init__.py  io.py  layers.py  registry.py  timing.py  wrapper.py
Xlearn/visual/: __init__.py  analysis.py  receptive_field.py
xxlearn/: __init__.py  cli.py  constant.py  exp.py
xxlearn/callback/: base.py  logging.py  lr_schedule.py  scoring.py
xxlearn/configs/: __init__.py  config.py  other.py  sampler.py
xxlearn/datasets/: base.py  imdb.py  mnist.py  static.py  time_ml.py
xxlearn/networks/: base.py
xxlearn/networks/_numpy/: __init__.py
xxlearn/networks/_skorch/: __init__.py  data.py  hf.py
xxlearn/networks/activation/: __init__.py
xxlearn/utils/: exceptions.py  io.py  random.py  timing.py  types.py  wrapper.py
xxlearn/visual/: __init__.py  analysis.py  receptive_field.py
