[tool.poetry]
name = "xxlearn"
version = "0.0.0.3"
description = ""
authors = ["dennislblog <dennisl@udel.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
accelerate = "^0.12.0"
cloudpickle = "^2.1.0"
colorama = "^0.4.5"
coloredlogs = "^15.0.1"
comet-ml = "3.31.8"
scipy = "1.8.0"
dstoolbox = "0.12.1"
matplotlib = "3.5.1"
numpy = "^1.23.2"
plotly = "^5.10.0"
scikit-learn = "^1.1.2"
seaborn = "^0.12.0"
tqdm = "^4.64.1"
skorch = "^0.11.0"
optuna = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
